[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[options]
package_dir = {'' = 'src'}

[project]
name = "ll-visualiser"
description = "PyVista visualiser for musculoskeletal meshes and landmarks."
authors = [{name = "Laura Carman", email = "laura.carman@auckland.ac.nz"},
           {name = "Timothy Salemink", email = "tim.nicolas@outlook.com"}]
readme = "README.md"
version = "0.2.0"
dynamic = ["dependencies"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Repository = "https://github.com/lauracarman/llbone_measurement_visualiser"
